[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/gameplay/LoseScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/shaders/Blur.tres" type="Material" id=2]
[ext_resource path="res://assets/ui/themes/BlueToppedSettings.tres" type="Theme" id=3]
[ext_resource path="res://utils/ButtonSFX.gd" type="Script" id=4]
[ext_resource path="res://utils/ButtonChangeScene.gd" type="Script" id=5]

[node name="LoseScreen" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50

[node name="ColorRect" type="ColorRect" parent="M"]
material = ExtResource( 2 )
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 550.0

[node name="M" type="MarginContainer" parent="M"]
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 550.0

[node name="V" type="VBoxContainer" parent="M/M"]
margin_right = 824.0
margin_bottom = 500.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="M/M/V"]
margin_left = 270.0
margin_top = 110.0
margin_right = 553.0
margin_bottom = 137.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "THE CREATURES TOOK OVER"
align = 1
valign = 1

[node name="V" type="VBoxContainer" parent="M/M/V"]
margin_top = 339.0
margin_right = 824.0
margin_bottom = 413.0
size_flags_vertical = 6
custom_constants/separation = 20
alignment = 1

[node name="H" type="HBoxContainer" parent="M/M/V/V"]
margin_left = 237.0
margin_right = 587.0
margin_bottom = 27.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 4
custom_constants/separation = 20
alignment = 1

[node name="Retry" type="Button" parent="M/M/V/V/H"]
margin_right = 165.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = " Retry Wave "
script = ExtResource( 4 )

[node name="Restart" type="Button" parent="M/M/V/V/H"]
margin_left = 185.0
margin_right = 350.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = " Restart Level "
script = ExtResource( 4 )

[node name="H2" type="HBoxContainer" parent="M/M/V/V"]
margin_left = 237.0
margin_top = 47.0
margin_right = 587.0
margin_bottom = 74.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 4
custom_constants/separation = 20
alignment = 1

[node name="Settings" type="Button" parent="M/M/V/V/H2"]
margin_right = 165.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = " Settings "
script = ExtResource( 4 )

[node name="Menu" type="Button" parent="M/M/V/V/H2"]
margin_left = 185.0
margin_right = 350.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Main Menu"
script = ExtResource( 5 )
next_scene = "res://ui/MainMenu.tscn"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="M/M/V/V/H/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="M/M/V/V/H/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="M/M/V/V/H2/Settings" to="." method="_on_Settings_pressed"]
